- refactor swagger - refactor responseError for ANPR and Inad
