# src/main/java/it/pagopa/pn/national/registries/model/inad/InadResponseKO.java
@@ -1,0 +1,10 @@
+package it.pagopa.pn.national.registries.model.inad;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.Data;
+
+@Data
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class InadResponseKO {
+    private String detail;
+}
